--- a/style.css
+++ b/style.css
@@ -97,14 +97,14 @@ body {
 .center {
     margin: 0 80px;
 }
-.vertical-line{
+/* .vertical-line{
     width: 1px;
     background-color: silver;
     height: 100%;
     float: left;
     border: 2px ridge rgb(255, 255, 255);
     border-radius: 2px;
-}
+} */
 .middle {
     display: block;
     position: absolute;
@@ -118,7 +118,7 @@ body {
     bottom: 45px;
     overflow: visible;
 }
-.footer p { 
+.footer p {
     /*    position: relative;*/
     color: rgb(255, 255, 255);
     font-size: 13.4px;
