--- a/stylesresume.css
+++ b/stylesresume.css
@@ -18,7 +18,9 @@ body {
     width: 100%;
     height: auto;
     background-color: rgba(0, 0, 0, .6);
+    padding-bottom: 15px;
 }
+
 .flex-container {
     display: -webkit-flex;
     display: flex;
@@ -73,7 +75,7 @@ body {
     color:rgb(211,211,211);
 }
 .spacer {
-    height: 110px;
+    height: 100px;
     width: 400px;
     background-color: transparent;
 }
